新增内存的相关知识，

--- a/ListDemo/ListDemo.vcxproj
+++ b/ListDemo/ListDemo.vcxproj
@@ -290,6 +290,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ListMainForm.h" />
     <ClInclude Include="MenuWnd.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
