--- a/ListDemo/ListDemo.vcxproj
+++ b/ListDemo/ListDemo.vcxproj
@@ -270,6 +270,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CUserControler.cpp" />
     <ClCompile Include="CUserInfo.cpp" />
     <ClCompile Include="ListMainForm.cpp" />
     <ClCompile Include="Main.cpp">
@@ -292,6 +293,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CUserControler.h" />
     <ClInclude Include="CUserInfo.h" />
     <ClInclude Include="ListMainForm.h" />
     <ClInclude Include="MenuWnd.h" />
