--- a/ErrorDemo/ErrorDemo.vcxproj
+++ b/ErrorDemo/ErrorDemo.vcxproj
@@ -274,11 +274,13 @@
     <ClCompile Include="ErrorDemo.cpp" />
     <ClCompile Include="ErrorMainForm.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="StackWalker.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ErrorDemo.h" />
     <ClInclude Include="ErrorMainForm.h" />
     <ClInclude Include="MenuWnd.h" />
+    <ClInclude Include="StackWalker.h" />
     <ClInclude Include="StdAfx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
